changedetection-io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-io
  namespace: changedetection-io
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: changedetection-io
      app.kubernetes.io/name: changedetection-io
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: changedetection-io
        app.kubernetes.io/name: changedetection-io
        pod.name: main
    spec:
      automountServiceAccountToken: false
      containers:
        - name: changedetection-io
          image: ghcr.io/dgtlmoon/changedetection.io:0.60.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 5000
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 8Gi
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /datastore
              name: datastore
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
        - name: sockpuppetbrowser
          image: dgtlmoon/sockpuppetbrowser:latest
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
          ports:
            - containerPort: 3000
              name: main
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 8Gi
            requests:
              cpu: 10m
              memory: 50Mi
      dnsConfig:
        options:
          - name: ndots
            value: '1'
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: datastore
          persistentVolumeClaim:
            claimName: changedetection-io-datastore
        - emptyDir:
            medium: Memory
            sizeLimit: 8Gi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 8Gi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 8Gi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 8Gi
          name: varrun
