changedetection-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection-io
  namespace: changedetection-io
spec:
  ports:
    - name: main
      port: 5000
      protocol: TCP
      targetPort: 5000
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: changedetection-io
    app.kubernetes.io/name: changedetection-io
    pod.name: main
  type: ClusterIP
